--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.2",
-    "react-refresh": "^0.8.1",
     "rollup": "^2.3.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-browsersync": "^1.1.0",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-progress": "^1.1.1",
+    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-visualizer": "^4.0.2",
     "typescript": "^3.8.3"
   }
 }
