--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "rollup -cw --environment BUILD:development"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.0.1"
@@ -25,6 +26,7 @@
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
     "@rollup/plugin-typescript": "^4.0.0",
+    "@types/express": "^4.17.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
