--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "eft",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
+  "module": "dist/server.esm.js",
   "repository": "https://github.com/enessefak/eft.git",
   "author": "enes.sefa.k <enes.sefa.k@gmail.com>",
   "license": "MIT",
@@ -9,7 +10,11 @@
     "build": "rollup -c --environment BUILD:production",
     "dev": "rollup -cw --environment BUILD:development"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
+    "core-js": "3",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -21,11 +26,10 @@
     "@babel/plugin-syntax-decorators": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@rollup/plugin-alias": "^3.0.1",
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
-    "@rollup/plugin-typescript": "^4.0.0",
     "@types/express": "^4.17.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
@@ -37,12 +41,14 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "rollup": "^2.3.1",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-browsersync": "^1.1.0",
     "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-progress": "^1.1.1",
+    "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-plugin-visualizer": "^4.0.2",
     "typescript": "^3.8.3"
