--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,18 @@
   "compilerOptions": {
     "target": "es5",
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "importHelpers": false,
     "noEmit": true,
+    "noResolve": false,
     "jsx": "preserve",
     "lib": [
       "dom",
