--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,15 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "babel-plugin-styled-components",
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "fileName": true,
+        "preprocess": false
+      }
+    ],
     [
       "@babel/plugin-proposal-class-properties",
       {
