--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "reload": "^3.0.4",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
