--- a/.babelrc
+++ b/.babelrc
@@ -10,11 +10,10 @@
   ],
   "plugins": [
     [
-      "babel-plugin-styled-components",
+      "styled-components",
       {
         "ssr": true,
         "displayName": true,
-        "fileName": true,
         "preprocess": false
       }
     ],
