--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/styled-components": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
-    "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
@@ -52,6 +51,7 @@
     "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-plugin-visualizer": "^4.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "typescript-plugin-styled-components": "^1.4.4"
   }
 }
