--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,17 @@
     ],
     "typeRoots": [
       "node_modules/@types"
+    ],
+    "plugins": [
+      {
+        "transform": "typescript-plugin-styled-components",
+        "type": "config",
+        "minify": true,
+        "ssr": true,
+        "displayName": true,
+        "fileName": true,
+        "preprocess": false
+      }
     ]
   },
   "include": [
