--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dist"
   ],
   "dependencies": {
-    "core-js": "3",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -41,7 +41,6 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "rollup": "^2.3.1",
     "rollup-plugin-babel": "^4.4.0",
