--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "enes.sefa.k <enes.sefa.k@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "rollup -c --environment BUILD:production",
-    "dev": "rollup -cw --environment BUILD:development"
+    "start": "yarn run build && node dist/server",
+    "build": "cross-env BUILD=production node index",
+    "dev": "cross-env BUILD=development node index"
   },
   "files": [
     "dist"
@@ -34,17 +34,21 @@
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-replace": "^2.3.1",
+    "@rollup/plugin-run": "^2.0.1",
     "@types/express": "^4.17.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-disable": "^2.0.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.3.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^6.2.1",
