--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   ],
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "lowdb": "^1.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "reload": "^3.0.4",
+    "serialize-javascript": "^3.0.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
@@ -57,6 +60,7 @@
     "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-plugin-visualizer": "^4.0.2",
+    "source-map-support": "^0.5.16",
     "typescript": "^3.8.3",
     "typescript-plugin-styled-components": "^1.4.4"
   }
