--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-disable": "^2.0.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^0.0.0-d7382b6c4",
     "prettier": "^2.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.3.1",
