--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/react-common": "^3.1.4",
     "@apollo/react-hooks": "^3.1.5",
+    "@apollo/react-ssr": "^3.1.5",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "compression": "^1.7.4",
