--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "dependencies": {
     "@apollo/react-common": "^3.1.4",
     "@apollo/react-hooks": "^3.1.5",
-    "@apollo/react-ssr": "^3.1.5",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-rest": "^0.8.0-beta.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
+    "graphql-anywhere": "^4.2.6",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
+    "qs": "^6.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
