--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,13 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "helpers": true,
+        "regenerator": true
+      }
+    ],
     "@babel/plugin-syntax-import-meta",
     [
       "@babel/plugin-proposal-class-properties",
