--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-syntax-decorators": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-alias": "^3.1.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
